# dabang_API

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy-docker-secrets.py  deploy-docker.sh  deploy.sh  docker-run-secrets.py  docker-run.py  pyproject.toml  requirements.txt  sms.py
.cert/: jkMZlUTG4ZcMThAmvnxS2nrWKeiD4o6PhqkZj3721w4
.config/: dabangapi.nginx  gunicorn.py  supervisord.conf
app/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  dabang test code.ipynb
app/config/: settings.py  urls.py
app/members/: admin.py  apis.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200325_1915.py  0002_auto_20200327_1805.py  0002_auto_20200330_1550.py  0002_auto_20200330_1631.py  0002_auto_20200401_1719.py  0002_auto_20200402_1447.py  0002_auto_20200403_0351.py  0002_auto_20200403_0954.py  0002_auto_20200403_1548.py  0002_auto_20200406_0554.py  0002_auto_20200406_0804.py  0002_auto_20200407_0823.py  0002_auto_20200408_1358.py  0002_auto_20200408_1711.py  0002_auto_20200411_1523.py  0002_auto_20200412_0927.py  0002_auto_20200413_1655.py  0002_auto_20200415_2017.py  0002_auto_20200415_2048.py  0002_auto_20200415_2125.py  0002_auto_20200421_1935.py  0002_auto_20200423_1643.py  0002_auto_20200423_2331.py  0002_auto_20200424_0032.py  0002_auto_20200424_0256.py  0002_auto_20200424_1507.py  0002_auto_20200424_1815.py  0002_auto_20200427_1602.py  0002_auto_20200428_0017.py  0002_auto_20200428_0055.py  0002_auto_20200428_1036.py  0002_auto_20200428_1042.py  0002_auto_20200428_1331.py  0002_auto_20200428_2040.py  0002_auto_20200428_2148.py  0002_auto_20200429_0051.py  0002_auto_20200429_1326.py  0002_sociallogin.py  0003_auto_20200331_0134.py  (+2 more)
app/posts/: admin.py  apis.py  findRoom.py  models.py  serializers.py  urls.py  views.py
app/posts/crawling/: find_urls.py  postFind.py
app/posts/migrations/: 0001_initial.py  0002_auto_20200325_1922.py  0002_auto_20200331_1748.py  0002_auto_20200403_0656.py  (+17 more)
app/salesinlots/: apps.py  crawling.py  models.py
app/templates/: login.html
(+1 files in other folders)
