[tool.poetry]
name = "wps_dabangapi"
version = "0.1.0"
description = ""
authors = ["moonpeter <moonpeter@kakao.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
djangorestframework = "^3.11.0"
notebook = "^6.0.3"
gunicorn = "^20.0.4"
supervisor = "^4.1.0"
requests = "^2.23.0"
djangorestframework-jwt = "^1.11.0"

Pillow = "^7.0.0"
django_extensions = "^2.2.8"
psycopg2-binary = "^2.8.4"
sentry_sdk = "^0.14.3"
django-debug-toolbar = "^2.2"
selenium = "^3.141.0"
pandas = "^1.0.3"
bs4 = "^0.0.1"
lxml = "^4.5.0"
cssutils = "^1.0.2"
boto3 = "^1.12.39"
storage = "^0.0.4"
django-storages = "^1.9.1"

django-rest-framework-social-oauth2 = "^1.1.0"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
